--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -97,12 +97,112 @@
     "MM_Sticky": true
   },
   "permittedentities": {
-    "Drowned": true
+    "SkeletonGirlEntity": true,
+    "ZombieLumberjackEntity": true,
+    "Creeper": true,
+    "BloodyGadflyEntity": true,
+    "BabySpiderEntity": true,
+    "SiameseSkeletonsEntity": true,
+    "Forgotten": true,
+    "CorpseFishEntity": true,
+    "CorpseFlyEntity": true,
+    "DoorKnightEntity": true,
+    "DrownedGirlEntity": true,
+    "MotherSpiderEntity": true,
+    "EnderMan": true,
+    "FallenChaosKnightEntity": true,
+    "CreeperGirlEntity": true,
+    "GluttonFishEntity": true,
+    "Skeleton": true,
+    "BaseCreeper": true,
+    "DarkVortexEntity": true,
+    "Witch": true,
+    "GhostEntity": true,
+    "BonescallerEntity": true,
+    "SkeletonDemomanEntity": true,
+    "KoboldEntity": true,
+    "Zombie": true,
+    "SwarmerEntity": true,
+    "ZombieClownEntity": true,
+    "DecrepitSkeletonEntity": true,
+    "DecayingZombieEntity": true,
+    "ZombieBruiserEntity": true,
+    "DreadHoundEntity": true,
+    "CursedDollEntity": true,
+    "Drowned": true,
+    "ZombieFishermanEntity": true,
+    "SkeletonThrasherEntity": true,
+    "ZombieGirlEntity": true,
+    "BabySkeletonEntity": true,
+    "RestlessSpiritEntity": true,
+    "Spider": true,
+    "ZombieVillager": true,
+    "LichEntity": true,
+    "BarrelZombieEntity": true,
+    "MimicEntity": true,
+    "OgreEntity": true
   },
   "entitiesalwaysinfernal": {
-    "Drowned": false
+    "SkeletonGirlEntity": false,
+    "ZombieLumberjackEntity": false,
+    "Creeper": false,
+    "BloodyGadflyEntity": false,
+    "BabySpiderEntity": false,
+    "SiameseSkeletonsEntity": false,
+    "Forgotten": false,
+    "CorpseFishEntity": false,
+    "CorpseFlyEntity": false,
+    "DoorKnightEntity": false,
+    "DrownedGirlEntity": false,
+    "MotherSpiderEntity": false,
+    "EnderMan": false,
+    "FallenChaosKnightEntity": false,
+    "CreeperGirlEntity": false,
+    "GluttonFishEntity": false,
+    "Skeleton": false,
+    "BaseCreeper": false,
+    "DarkVortexEntity": false,
+    "Witch": false,
+    "GhostEntity": false,
+    "BonescallerEntity": false,
+    "SkeletonDemomanEntity": false,
+    "KoboldEntity": false,
+    "Zombie": false,
+    "SwarmerEntity": false,
+    "ZombieClownEntity": false,
+    "DecrepitSkeletonEntity": false,
+    "DecayingZombieEntity": false,
+    "ZombieBruiserEntity": false,
+    "DreadHoundEntity": false,
+    "CursedDollEntity": false,
+    "Drowned": false,
+    "ZombieFishermanEntity": false,
+    "SkeletonThrasherEntity": false,
+    "ZombieGirlEntity": false,
+    "BabySkeletonEntity": false,
+    "RestlessSpiritEntity": false,
+    "Spider": false,
+    "ZombieVillager": false,
+    "LichEntity": false,
+    "BarrelZombieEntity": false,
+    "MimicEntity": false,
+    "OgreEntity": false
   },
-  "entitybasehealth": {},
+  "entitybasehealth": {
+    "Zombie": 82.68775177001953,
+    "Creeper": 20.0,
+    "DecrepitSkeletonEntity": 15.0,
+    "BabySpiderEntity": 10.0,
+    "DreadHoundEntity": 17.0,
+    "CorpseFishEntity": 12.0,
+    "CorpseFlyEntity": 10.0,
+    "Drowned": 20.0,
+    "ZombieGirlEntity": 30.0,
+    "BabySkeletonEntity": 10.0,
+    "Spider": 16.0,
+    "Skeleton": 20.0,
+    "GhostEntity": 18.0
+  },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
   "useRandomChampionSelection": false,
