--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -98,109 +98,134 @@
   },
   "permittedentities": {
     "SkeletonGirlEntity": true,
+    "Forgotten": true,
+    "CorpseFlyEntity": true,
+    "DoorKnightEntity": true,
+    "EnderMan": true,
+    "CreeperGirlEntity": true,
+    "BonescallerEntity": true,
+    "MaggotEntity": true,
+    "PhantomCreeperEntity": true,
+    "Deepling_Entity": true,
+    "KoboldEntity": true,
+    "Zombie": true,
+    "SwarmerEntity": true,
+    "ZombieClownEntity": true,
+    "Lionfish_Entity": true,
+    "DecrepitSkeletonEntity": true,
+    "Deepling_Angler_Entity": true,
+    "ZombieBruiserEntity": true,
+    "CursedDollEntity": true,
+    "Drowned": true,
+    "ZombieFishermanEntity": true,
+    "ZombieVillager": true,
+    "LichEntity": true,
+    "BarrelZombieEntity": true,
+    "MimicEntity": true,
+    "OgreEntity": true,
     "ZombieLumberjackEntity": true,
     "Creeper": true,
     "BloodyGadflyEntity": true,
     "BabySpiderEntity": true,
     "SiameseSkeletonsEntity": true,
-    "Forgotten": true,
+    "SpiritofChaosEntity": true,
     "CorpseFishEntity": true,
-    "CorpseFlyEntity": true,
-    "DoorKnightEntity": true,
     "DrownedGirlEntity": true,
     "MotherSpiderEntity": true,
-    "EnderMan": true,
     "FallenChaosKnightEntity": true,
-    "CreeperGirlEntity": true,
     "GluttonFishEntity": true,
     "Skeleton": true,
     "BaseCreeper": true,
     "DarkVortexEntity": true,
     "Witch": true,
     "GhostEntity": true,
-    "BonescallerEntity": true,
+    "EntityCentipedeHead": true,
     "SkeletonDemomanEntity": true,
-    "KoboldEntity": true,
-    "Zombie": true,
-    "SwarmerEntity": true,
-    "ZombieClownEntity": true,
-    "DecrepitSkeletonEntity": true,
     "DecayingZombieEntity": true,
-    "ZombieBruiserEntity": true,
     "DreadHoundEntity": true,
-    "CursedDollEntity": true,
-    "Drowned": true,
-    "ZombieFishermanEntity": true,
     "SkeletonThrasherEntity": true,
     "ZombieGirlEntity": true,
     "BabySkeletonEntity": true,
     "RestlessSpiritEntity": true,
-    "Spider": true,
-    "ZombieVillager": true,
-    "LichEntity": true,
-    "BarrelZombieEntity": true,
-    "MimicEntity": true,
-    "OgreEntity": true
+    "Spider": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
+    "Forgotten": false,
+    "CorpseFlyEntity": false,
+    "DoorKnightEntity": false,
+    "EnderMan": false,
+    "CreeperGirlEntity": false,
+    "BonescallerEntity": false,
+    "MaggotEntity": false,
+    "PhantomCreeperEntity": false,
+    "Deepling_Entity": false,
+    "KoboldEntity": false,
+    "Zombie": false,
+    "SwarmerEntity": false,
+    "ZombieClownEntity": false,
+    "Lionfish_Entity": false,
+    "DecrepitSkeletonEntity": false,
+    "Deepling_Angler_Entity": false,
+    "ZombieBruiserEntity": false,
+    "CursedDollEntity": false,
+    "Drowned": false,
+    "ZombieFishermanEntity": false,
+    "ZombieVillager": false,
+    "LichEntity": false,
+    "BarrelZombieEntity": false,
+    "MimicEntity": false,
+    "OgreEntity": false,
     "ZombieLumberjackEntity": false,
     "Creeper": false,
     "BloodyGadflyEntity": false,
     "BabySpiderEntity": false,
     "SiameseSkeletonsEntity": false,
-    "Forgotten": false,
+    "SpiritofChaosEntity": false,
     "CorpseFishEntity": false,
-    "CorpseFlyEntity": false,
-    "DoorKnightEntity": false,
     "DrownedGirlEntity": false,
     "MotherSpiderEntity": false,
-    "EnderMan": false,
     "FallenChaosKnightEntity": false,
-    "CreeperGirlEntity": false,
     "GluttonFishEntity": false,
     "Skeleton": false,
     "BaseCreeper": false,
     "DarkVortexEntity": false,
     "Witch": false,
     "GhostEntity": false,
-    "BonescallerEntity": false,
+    "EntityCentipedeHead": false,
     "SkeletonDemomanEntity": false,
-    "KoboldEntity": false,
-    "Zombie": false,
-    "SwarmerEntity": false,
-    "ZombieClownEntity": false,
-    "DecrepitSkeletonEntity": false,
     "DecayingZombieEntity": false,
-    "ZombieBruiserEntity": false,
     "DreadHoundEntity": false,
-    "CursedDollEntity": false,
-    "Drowned": false,
-    "ZombieFishermanEntity": false,
     "SkeletonThrasherEntity": false,
     "ZombieGirlEntity": false,
     "BabySkeletonEntity": false,
     "RestlessSpiritEntity": false,
-    "Spider": false,
-    "ZombieVillager": false,
-    "LichEntity": false,
-    "BarrelZombieEntity": false,
-    "MimicEntity": false,
-    "OgreEntity": false
+    "Spider": false
   },
   "entitybasehealth": {
+    "Deepling_Entity": 26.0,
+    "SkeletonGirlEntity": 30.0,
+    "SkeletonDemomanEntity": 25.0,
     "Zombie": 82.68775177001953,
     "Creeper": 20.0,
+    "ZombieClownEntity": 35.0,
     "DecrepitSkeletonEntity": 15.0,
     "BabySpiderEntity": 10.0,
+    "SpiritofChaosEntity": 15.0,
     "DreadHoundEntity": 17.0,
     "CorpseFishEntity": 12.0,
     "CorpseFlyEntity": 10.0,
     "Drowned": 20.0,
+    "DoorKnightEntity": 30.0,
+    "DrownedGirlEntity": 30.0,
     "ZombieGirlEntity": 30.0,
     "BabySkeletonEntity": 10.0,
     "Spider": 16.0,
+    "CreeperGirlEntity": 30.0,
+    "RestlessSpiritEntity": 24.0,
     "Skeleton": 20.0,
+    "GluttonFishEntity": 90.0,
+    "MimicEntity": 60.0,
     "GhostEntity": 18.0
   },
   "enableChampionCompat": true,
