--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -147,7 +147,10 @@
     "ZombieGirlEntity": true,
     "BabySkeletonEntity": true,
     "RestlessSpiritEntity": true,
-    "Spider": true
+    "Spider": true,
+    "NecroticReaperEntity": true,
+    "DireHoundLeaderEntity": true,
+    "SupremeBonescallerEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -200,7 +203,10 @@
     "ZombieGirlEntity": false,
     "BabySkeletonEntity": false,
     "RestlessSpiritEntity": false,
-    "Spider": false
+    "Spider": false,
+    "NecroticReaperEntity": false,
+    "DireHoundLeaderEntity": false,
+    "SupremeBonescallerEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -226,7 +232,13 @@
     "Skeleton": 20.0,
     "GluttonFishEntity": 90.0,
     "MimicEntity": 60.0,
-    "GhostEntity": 18.0
+    "GhostEntity": 18.0,
+    "MaggotEntity": 6.0,
+    "ZombieLumberjackEntity": 25.0,
+    "CursedDollEntity": 40.0,
+    "DecayingZombieEntity": 25.0,
+    "SwarmerEntity": 40.0,
+    "ZombieBruiserEntity": 60.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
