--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -150,7 +150,24 @@
     "Spider": true,
     "NecroticReaperEntity": true,
     "DireHoundLeaderEntity": true,
-    "SupremeBonescallerEntity": true
+    "SupremeBonescallerEntity": true,
+    "SiameseSkeletonsrightEntity": true,
+    "SiameseSkeletonsleftEntity": true,
+    "HornetEntity": true,
+    "HarpyEntity": true,
+    "Silverfish": true,
+    "SpiderNestEntity": true,
+    "PufferfishCreeper": true,
+    "EntityWroughtnaut": true,
+    "GlaryadEntity": true,
+    "NeutralCreeper": true,
+    "RedcapEntity": true,
+    "DullahanEntity": true,
+    "EnderExecutorEntity": true,
+    "WitherSkeleton": true,
+    "Stray": true,
+    "Vindicator": true,
+    "Pillager": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -206,7 +223,24 @@
     "Spider": false,
     "NecroticReaperEntity": false,
     "DireHoundLeaderEntity": false,
-    "SupremeBonescallerEntity": false
+    "SupremeBonescallerEntity": false,
+    "SiameseSkeletonsrightEntity": false,
+    "SiameseSkeletonsleftEntity": false,
+    "HornetEntity": false,
+    "HarpyEntity": false,
+    "Silverfish": false,
+    "SpiderNestEntity": false,
+    "PufferfishCreeper": false,
+    "EntityWroughtnaut": false,
+    "GlaryadEntity": false,
+    "NeutralCreeper": false,
+    "RedcapEntity": false,
+    "DullahanEntity": false,
+    "EnderExecutorEntity": false,
+    "WitherSkeleton": false,
+    "Stray": false,
+    "Vindicator": false,
+    "Pillager": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -238,7 +272,24 @@
     "CursedDollEntity": 40.0,
     "DecayingZombieEntity": 25.0,
     "SwarmerEntity": 40.0,
-    "ZombieBruiserEntity": 60.0
+    "ZombieBruiserEntity": 60.0,
+    "BloodyGadflyEntity": 20.0,
+    "ZombieVillager": 20.0,
+    "PhantomCreeperEntity": 20.0,
+    "NecroticReaperEntity": 60.0,
+    "SkeletonThrasherEntity": 50.0,
+    "KoboldEntity": 40.0,
+    "BonescallerEntity": 25.0,
+    "EnderMan": 40.0,
+    "BaseCreeper": 25.0,
+    "NeutralCreeper": 15.0,
+    "FallenChaosKnightEntity": 40.0,
+    "Vindicator": 24.0,
+    "OgreEntity": 80.0,
+    "DarkVortexEntity": 35.0,
+    "SiameseSkeletonsEntity": 20.0,
+    "ZombieFishermanEntity": 25.0,
+    "GlaryadEntity": 40.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
