--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -167,7 +167,12 @@
     "WitherSkeleton": true,
     "Stray": true,
     "Vindicator": true,
-    "Pillager": true
+    "Pillager": true,
+    "CatoblepasEntity": true,
+    "BabySkeletonMinionEntity": true,
+    "NightmareStalkerEntity": true,
+    "BoneImpMinionEntity": true,
+    "SupremeBonescallerStage2Entity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -240,7 +245,12 @@
     "WitherSkeleton": false,
     "Stray": false,
     "Vindicator": false,
-    "Pillager": false
+    "Pillager": false,
+    "CatoblepasEntity": false,
+    "BabySkeletonMinionEntity": false,
+    "NightmareStalkerEntity": false,
+    "BoneImpMinionEntity": false,
+    "SupremeBonescallerStage2Entity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -289,7 +299,11 @@
     "DarkVortexEntity": 35.0,
     "SiameseSkeletonsEntity": 20.0,
     "ZombieFishermanEntity": 25.0,
-    "GlaryadEntity": 40.0
+    "GlaryadEntity": 40.0,
+    "Lionfish_Entity": 12.0,
+    "Witch": 26.0,
+    "EntityCentipedeHead": 35.0,
+    "SupremeBonescallerStage2Entity": 60.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
