--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -172,7 +172,8 @@
     "BabySkeletonMinionEntity": true,
     "NightmareStalkerEntity": true,
     "BoneImpMinionEntity": true,
-    "SupremeBonescallerStage2Entity": true
+    "SupremeBonescallerStage2Entity": true,
+    "MeltyMonsterEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -250,7 +251,8 @@
     "BabySkeletonMinionEntity": false,
     "NightmareStalkerEntity": false,
     "BoneImpMinionEntity": false,
-    "SupremeBonescallerStage2Entity": false
+    "SupremeBonescallerStage2Entity": false,
+    "MeltyMonsterEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -303,7 +305,10 @@
     "Lionfish_Entity": 12.0,
     "Witch": 26.0,
     "EntityCentipedeHead": 35.0,
-    "SupremeBonescallerStage2Entity": 60.0
+    "SupremeBonescallerStage2Entity": 60.0,
+    "CatoblepasEntity": 40.0,
+    "DireHoundLeaderEntity": 100.0,
+    "Forgotten": 60.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
