--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -194,7 +194,10 @@
     "EntityStraddler": true,
     "Ghast": true,
     "WitherGhostEntity": true,
-    "SearedSpiritEntity": true
+    "SearedSpiritEntity": true,
+    "AlrauneEntity": true,
+    "EntityMurmur": true,
+    "EntityMurmurHead": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -294,7 +297,10 @@
     "EntityStraddler": false,
     "Ghast": false,
     "WitherGhostEntity": false,
-    "SearedSpiritEntity": false
+    "SearedSpiritEntity": false,
+    "AlrauneEntity": false,
+    "EntityMurmur": false,
+    "EntityMurmurHead": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
