--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -197,7 +197,8 @@
     "SearedSpiritEntity": true,
     "AlrauneEntity": true,
     "EntityMurmur": true,
-    "EntityMurmurHead": true
+    "EntityMurmurHead": true,
+    "DiamondThermiteEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -300,7 +301,8 @@
     "SearedSpiritEntity": false,
     "AlrauneEntity": false,
     "EntityMurmur": false,
-    "EntityMurmurHead": false
+    "EntityMurmurHead": false,
+    "DiamondThermiteEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -369,7 +371,9 @@
     "ZombifiedPiglin": 20.0,
     "NightmareStalkerEntity": 70.0,
     "MagmaCube": 25.0,
-    "ImpEntity": 40.0
+    "ImpEntity": 40.0,
+    "EntityMurmurHead": 30.0,
+    "EntityMurmur": 30.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
