--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -373,7 +373,9 @@
     "MagmaCube": 25.0,
     "ImpEntity": 40.0,
     "EntityMurmurHead": 30.0,
-    "EntityMurmur": 30.0
+    "EntityMurmur": 30.0,
+    "Slime": 1.0,
+    "BoneImpMinionEntity": 20.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
