--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -375,7 +375,8 @@
     "EntityMurmurHead": 30.0,
     "EntityMurmur": 30.0,
     "Slime": 1.0,
-    "BoneImpMinionEntity": 20.0
+    "BoneImpMinionEntity": 20.0,
+    "SiameseSkeletonsleftEntity": 10.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
