--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -376,7 +376,9 @@
     "EntityMurmur": 30.0,
     "Slime": 1.0,
     "BoneImpMinionEntity": 20.0,
-    "SiameseSkeletonsleftEntity": 10.0
+    "SiameseSkeletonsleftEntity": 10.0,
+    "DiamondThermiteEntity": 14.0,
+    "MotherSpiderEntity": 90.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
