--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -198,7 +198,10 @@
     "AlrauneEntity": true,
     "EntityMurmur": true,
     "EntityMurmurHead": true,
-    "DiamondThermiteEntity": true
+    "DiamondThermiteEntity": true,
+    "Evoker": true,
+    "DoguEntity": true,
+    "EntityFoliaath": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -302,7 +305,10 @@
     "AlrauneEntity": false,
     "EntityMurmur": false,
     "EntityMurmurHead": false,
-    "DiamondThermiteEntity": false
+    "DiamondThermiteEntity": false,
+    "Evoker": false,
+    "DoguEntity": false,
+    "EntityFoliaath": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -378,7 +384,9 @@
     "BoneImpMinionEntity": 20.0,
     "SiameseSkeletonsleftEntity": 10.0,
     "DiamondThermiteEntity": 14.0,
-    "MotherSpiderEntity": 90.0
+    "MotherSpiderEntity": 90.0,
+    "Pillager": 24.0,
+    "BansheeEntity": 40.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
