--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -201,7 +201,11 @@
     "DiamondThermiteEntity": true,
     "Evoker": true,
     "DoguEntity": true,
-    "EntityFoliaath": true
+    "EntityFoliaath": true,
+    "ElderGuardian": true,
+    "Guardian": true,
+    "SpiritGuideAssistantEntity": true,
+    "SpiritGuideEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -308,7 +312,11 @@
     "DiamondThermiteEntity": false,
     "Evoker": false,
     "DoguEntity": false,
-    "EntityFoliaath": false
+    "EntityFoliaath": false,
+    "ElderGuardian": false,
+    "Guardian": false,
+    "SpiritGuideAssistantEntity": false,
+    "SpiritGuideEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -386,7 +394,13 @@
     "DiamondThermiteEntity": 14.0,
     "MotherSpiderEntity": 90.0,
     "Pillager": 24.0,
-    "BansheeEntity": 40.0
+    "BansheeEntity": 40.0,
+    "PufferfishCreeper": 16.0,
+    "EntityFoliaath": 10.0,
+    "SavagefangEntity": 12.0,
+    "Deepling_Angler_Entity": 30.0,
+    "Guardian": 30.0,
+    "SpiritGuideAssistantEntity": 15.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
