--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -205,7 +205,12 @@
     "ElderGuardian": true,
     "Guardian": true,
     "SpiritGuideAssistantEntity": true,
-    "SpiritGuideEntity": true
+    "SpiritGuideEntity": true,
+    "LifestealerEntity": true,
+    "MissionerEntity": true,
+    "EntityUmvuthanaFollowerToRaptor": true,
+    "EntityUmvuthanaRaptor": true,
+    "Illusioner": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -316,7 +321,12 @@
     "ElderGuardian": false,
     "Guardian": false,
     "SpiritGuideAssistantEntity": false,
-    "SpiritGuideEntity": false
+    "SpiritGuideEntity": false,
+    "LifestealerEntity": false,
+    "MissionerEntity": false,
+    "EntityUmvuthanaFollowerToRaptor": false,
+    "EntityUmvuthanaRaptor": false,
+    "Illusioner": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -400,7 +410,9 @@
     "SavagefangEntity": 12.0,
     "Deepling_Angler_Entity": 30.0,
     "Guardian": 30.0,
-    "SpiritGuideAssistantEntity": 15.0
+    "SpiritGuideAssistantEntity": 15.0,
+    "EntityUmvuthanaFollowerToRaptor": 8.0,
+    "ElderGuardian": 80.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
