--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -210,7 +210,8 @@
     "MissionerEntity": true,
     "EntityUmvuthanaFollowerToRaptor": true,
     "EntityUmvuthanaRaptor": true,
-    "Illusioner": true
+    "Illusioner": true,
+    "SwamperEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -326,7 +327,8 @@
     "MissionerEntity": false,
     "EntityUmvuthanaFollowerToRaptor": false,
     "EntityUmvuthanaRaptor": false,
-    "Illusioner": false
+    "Illusioner": false,
+    "SwamperEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -412,7 +414,8 @@
     "Guardian": 30.0,
     "SpiritGuideAssistantEntity": 15.0,
     "EntityUmvuthanaFollowerToRaptor": 8.0,
-    "ElderGuardian": 80.0
+    "ElderGuardian": 80.0,
+    "Deepling_Brute_Entity": 60.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
