--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -211,7 +211,9 @@
     "EntityUmvuthanaFollowerToRaptor": true,
     "EntityUmvuthanaRaptor": true,
     "Illusioner": true,
-    "SwamperEntity": true
+    "SwamperEntity": true,
+    "SkySlimeEntity": true,
+    "PhantomCreeperCopyEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -328,7 +330,9 @@
     "EntityUmvuthanaFollowerToRaptor": false,
     "EntityUmvuthanaRaptor": false,
     "Illusioner": false,
-    "SwamperEntity": false
+    "SwamperEntity": false,
+    "SkySlimeEntity": false,
+    "PhantomCreeperCopyEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -415,7 +419,10 @@
     "SpiritGuideAssistantEntity": 15.0,
     "EntityUmvuthanaFollowerToRaptor": 8.0,
     "ElderGuardian": 80.0,
-    "Deepling_Brute_Entity": 60.0
+    "Deepling_Brute_Entity": 60.0,
+    "LifestealerEntity": 100.0,
+    "BabySkeletonMinionEntity": 10.0,
+    "PhantomCreeperCopyEntity": 20.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
