--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -214,7 +214,8 @@
     "SwamperEntity": true,
     "SkySlimeEntity": true,
     "PhantomCreeperCopyEntity": true,
-    "Vex": true
+    "Vex": true,
+    "EntityNaga": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -334,7 +335,8 @@
     "SwamperEntity": false,
     "SkySlimeEntity": false,
     "PhantomCreeperCopyEntity": false,
-    "Vex": false
+    "Vex": false,
+    "EntityNaga": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
