--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -433,7 +433,8 @@
     "Vex": 14.0,
     "Evoker": 24.0,
     "EntityUmvuthanaRaptor": 10.0,
-    "EntityWroughtnaut": 40.0
+    "EntityWroughtnaut": 40.0,
+    "SearedSpiritEntity": 50.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
