--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -215,7 +215,9 @@
     "SkySlimeEntity": true,
     "PhantomCreeperCopyEntity": true,
     "Vex": true,
-    "EntityNaga": true
+    "EntityNaga": true,
+    "SearedSpiritNotDespawnEntity": true,
+    "Ravager": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -336,7 +338,9 @@
     "SkySlimeEntity": false,
     "PhantomCreeperCopyEntity": false,
     "Vex": false,
-    "EntityNaga": false
+    "EntityNaga": false,
+    "SearedSpiritNotDespawnEntity": false,
+    "Ravager": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -434,7 +438,8 @@
     "Evoker": 24.0,
     "EntityUmvuthanaRaptor": 10.0,
     "EntityWroughtnaut": 40.0,
-    "SearedSpiritEntity": 50.0
+    "SearedSpiritEntity": 50.0,
+    "EntityRockyRoller": 10.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
