--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -217,7 +217,12 @@
     "Vex": true,
     "EntityNaga": true,
     "SearedSpiritNotDespawnEntity": true,
-    "Ravager": true
+    "Ravager": true,
+    "DodomekiEntity": true,
+    "EntityFrostmaw": true,
+    "SlimeGirlEntity": true,
+    "EntityUmvuthanaMinion": true,
+    "EntityUmvuthi": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -340,7 +345,12 @@
     "Vex": false,
     "EntityNaga": false,
     "SearedSpiritNotDespawnEntity": false,
-    "Ravager": false
+    "Ravager": false,
+    "DodomekiEntity": false,
+    "EntityFrostmaw": false,
+    "SlimeGirlEntity": false,
+    "EntityUmvuthanaMinion": false,
+    "EntityUmvuthi": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -439,7 +449,8 @@
     "EntityUmvuthanaRaptor": 10.0,
     "EntityWroughtnaut": 40.0,
     "SearedSpiritEntity": 50.0,
-    "EntityRockyRoller": 10.0
+    "EntityRockyRoller": 10.0,
+    "DoguEntity": 80.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
