--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -450,7 +450,8 @@
     "EntityWroughtnaut": 40.0,
     "SearedSpiritEntity": 50.0,
     "EntityRockyRoller": 10.0,
-    "DoguEntity": 80.0
+    "DoguEntity": 80.0,
+    "SpiritGuideEntity": 32.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
