--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -222,7 +222,8 @@
     "EntityFrostmaw": true,
     "SlimeGirlEntity": true,
     "EntityUmvuthanaMinion": true,
-    "EntityUmvuthi": true
+    "EntityUmvuthi": true,
+    "ZombieClownNotDespawnEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -350,7 +351,8 @@
     "EntityFrostmaw": false,
     "SlimeGirlEntity": false,
     "EntityUmvuthanaMinion": false,
-    "EntityUmvuthi": false
+    "EntityUmvuthi": false,
+    "ZombieClownNotDespawnEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -451,7 +453,8 @@
     "SearedSpiritEntity": 50.0,
     "EntityRockyRoller": 10.0,
     "DoguEntity": 80.0,
-    "SpiritGuideEntity": 32.0
+    "SpiritGuideEntity": 32.0,
+    "WitherSkeleton": 30.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
