--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -223,7 +223,8 @@
     "SlimeGirlEntity": true,
     "EntityUmvuthanaMinion": true,
     "EntityUmvuthi": true,
-    "ZombieClownNotDespawnEntity": true
+    "ZombieClownNotDespawnEntity": true,
+    "MimicerEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -352,7 +353,8 @@
     "SlimeGirlEntity": false,
     "EntityUmvuthanaMinion": false,
     "EntityUmvuthi": false,
-    "ZombieClownNotDespawnEntity": false
+    "ZombieClownNotDespawnEntity": false,
+    "MimicerEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
