--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -224,7 +224,8 @@
     "EntityUmvuthanaMinion": true,
     "EntityUmvuthi": true,
     "ZombieClownNotDespawnEntity": true,
-    "MimicerEntity": true
+    "MimicerEntity": true,
+    "Endermite": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -354,7 +355,8 @@
     "EntityUmvuthanaMinion": false,
     "EntityUmvuthi": false,
     "ZombieClownNotDespawnEntity": false,
-    "MimicerEntity": false
+    "MimicerEntity": false,
+    "Endermite": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
@@ -456,7 +458,8 @@
     "EntityRockyRoller": 10.0,
     "DoguEntity": 80.0,
     "SpiritGuideEntity": 32.0,
-    "WitherSkeleton": 30.0
+    "WitherSkeleton": 30.0,
+    "MimicerEntity": 60.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
