--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -459,7 +459,8 @@
     "DoguEntity": 80.0,
     "SpiritGuideEntity": 32.0,
     "WitherSkeleton": 30.0,
-    "MimicerEntity": 60.0
+    "MimicerEntity": 60.0,
+    "SkySlimeEntity": 4.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
