--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -460,7 +460,8 @@
     "SpiritGuideEntity": 32.0,
     "WitherSkeleton": 30.0,
     "MimicerEntity": 60.0,
-    "SkySlimeEntity": 4.0
+    "SkySlimeEntity": 4.0,
+    "DodomekiEntity": 40.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
