--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -225,7 +225,10 @@
     "EntityUmvuthi": true,
     "ZombieClownNotDespawnEntity": true,
     "MimicerEntity": true,
-    "Endermite": true
+    "Endermite": true,
+    "SkeletonThrasherNotDespawnEntity": true,
+    "SupremeBonescallerNotDespawnEntity": true,
+    "BonescallerNotDespawnEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -356,7 +359,10 @@
     "EntityUmvuthi": false,
     "ZombieClownNotDespawnEntity": false,
     "MimicerEntity": false,
-    "Endermite": false
+    "Endermite": false,
+    "SkeletonThrasherNotDespawnEntity": false,
+    "SupremeBonescallerNotDespawnEntity": false,
+    "BonescallerNotDespawnEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
