--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -228,7 +228,8 @@
     "Endermite": true,
     "SkeletonThrasherNotDespawnEntity": true,
     "SupremeBonescallerNotDespawnEntity": true,
-    "BonescallerNotDespawnEntity": true
+    "BonescallerNotDespawnEntity": true,
+    "EntitySkreecher": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -362,7 +363,8 @@
     "Endermite": false,
     "SkeletonThrasherNotDespawnEntity": false,
     "SupremeBonescallerNotDespawnEntity": false,
-    "BonescallerNotDespawnEntity": false
+    "BonescallerNotDespawnEntity": false,
+    "EntitySkreecher": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
