--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -229,7 +229,8 @@
     "SkeletonThrasherNotDespawnEntity": true,
     "SupremeBonescallerNotDespawnEntity": true,
     "BonescallerNotDespawnEntity": true,
-    "EntitySkreecher": true
+    "EntitySkreecher": true,
+    "SnowCanineEntity": true
   },
   "entitiesalwaysinfernal": {
     "SkeletonGirlEntity": false,
@@ -364,7 +365,8 @@
     "SkeletonThrasherNotDespawnEntity": false,
     "SupremeBonescallerNotDespawnEntity": false,
     "BonescallerNotDespawnEntity": false,
-    "EntitySkreecher": false
+    "EntitySkreecher": false,
+    "SnowCanineEntity": false
   },
   "entitybasehealth": {
     "Deepling_Entity": 26.0,
